fixed resume spacing

--- a/web2/src/components/css/resume.css
+++ b/web2/src/components/css/resume.css
@@ -9,7 +9,7 @@
   ul.italic-spacer {
     padding-right: 5px;
   }
-  ul.more-info {
+  ul.more-info-wrapper {
     padding-top: 10px;
   }
 
